force-app/main/default/objects/Opportunity/fields/Heat_Source__c.field-meta.xml
<CustomField>
    <fullName>Heat_Source__c</fullName>
    <label>Heat Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DML Chip</fullName>
            </value>
            <value>
                <fullName>DFB Chip</fullName>
            </value>
            <value>
                <fullName>VCSEL</fullName>
            </value>
            <value>
                <fullName>EA Driver</fullName>
            </value>
            <value>
                <fullName>Wave Locker</fullName>
            </value>
            <value>
                <fullName>Etalon Filter</fullName>
            </value>
            <value>
                <fullName>Modulator</fullName>
            </value>
            <value>
                <fullName>QCL</fullName>
            </value>
            <value>
                <fullName>CMoS</fullName>
            </value>
            <value>
                <fullName>SOA</fullName>
            </value>
            <value>
                <fullName>Fiber Mount</fullName>
            </value>
            <value>
                <fullName>Driver IC</fullName>
            </value>
            <value>
                <fullName>RAMAN</fullName>
            </value>
            <value>
                <fullName>Silicon Photonics</fullName>
            </value>
            <value>
                <fullName>MEMs</fullName>
            </value>
            <value>
                <fullName>Unknown/Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>