force-app/main/default/objects/Opportunity/fields/HFS_OrderAmount__c.field-meta.xml
<CustomField>
    <fullName>HFS_OrderAmount__c</fullName>
    <description>HFS(生産営）共有の発注金額</description>
    <label>発注金額</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>