force-app/main/default/objects/Opportunity/fields/HHS_AgencyOwner__c.field-meta.xml
<CustomField>
    <fullName>HHS_AgencyOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>代理店担当者</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.Agency__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>商談 (代理店担当者)</relationshipLabel>
    <relationshipName>op3</relationshipName>
    <type>Lookup</type>
</CustomField>