force-app/main/default/objects/Opportunity/fields/HHS_Agencyownersection__c.field-meta.xml
<CustomField>
    <fullName>HHS_Agencyownersection__c</fullName>
    <description>代理店担当者の部署を参照</description>
    <formula>IF(ISBLANK(HHS_AgencyOwner__c),&quot;&quot;,HHS_AgencyOwner__r.Department)</formula>
    <label>代理店担当者所属</label>
    <type>Text</type>
</CustomField>