force-app/main/default/objects/Opportunity/fields/HHS_AgencySalesSupportRate__c.field-meta.xml
<CustomField>
    <fullName>HHS_AgencySalesSupportRate__c</fullName>
    <label>代理店の営業支援率</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-20%</fullName>
            </value>
            <value>
                <fullName>20-50%</fullName>
            </value>
            <value>
                <fullName>50-80%</fullName>
            </value>
            <value>
                <fullName>80-100%</fullName>
            </value>
            <value>
                <fullName>直PR-HHS単独</fullName>
            </value>
            <value>
                <fullName>代理店支援・同行</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>