force-app/main/default/objects/Opportunity/fields/HHS_ApprovalStockNo__c.field-meta.xml
<CustomField>
    <fullName>HHS_ApprovalStockNo__c</fullName>
    <label>在庫認可No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>