force-app/main/default/objects/Opportunity/fields/HHS_BehhyoKoban__c.field-meta.xml
<CustomField>
    <fullName>HHS_BehhyoKoban__c</fullName>
    <label>別表項番</label>
    <length>255</length>
    <type>Text</type>
</CustomField>