force-app/main/default/objects/Opportunity/fields/HHS_BillingDestinationOwnerName__c.field-meta.xml
<CustomField>
    <fullName>HHS_BillingDestinationOwnerName__c</fullName>
    <label>請求書送付宛先担当名称</label>
    <length>255</length>
    <type>Text</type>
</CustomField>