force-app/main/default/objects/Opportunity/fields/HHS_BillingDestinationSectionName__c.field-meta.xml
<CustomField>
    <fullName>HHS_BillingDestinationSectionName__c</fullName>
    <label>請求書送付宛先部署名称</label>
    <length>255</length>
    <type>Text</type>
</CustomField>