force-app/main/default/objects/Opportunity/fields/HHS_BudgetExistence__c.field-meta.xml
<CustomField>
    <fullName>HHS_BudgetExistence__c</fullName>
    <label>予算有無</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>予算有り、または有力　1か月以内</fullName>
            </value>
            <value>
                <fullName>予算有り、または有力　3ヶ月以内</fullName>
            </value>
            <value>
                <fullName>予算有り、または有力　6か月以内</fullName>
            </value>
            <value>
                <fullName>予算申請中　（または6カ月以上）</fullName>
            </value>
            <value>
                <fullName>予算無し</fullName>
            </value>
            <value>
                <fullName>予算不明</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>