force-app/main/default/objects/Opportunity/fields/HHS_BudgetType__c.field-meta.xml
<CustomField>
    <fullName>HHS_BudgetType__c</fullName>
    <label>予算種類</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>科研費</fullName>
            </value>
            <value>
                <fullName>補正</fullName>
            </value>
            <value>
                <fullName>学内</fullName>
            </value>
            <value>
                <fullName>国プロ</fullName>
            </value>
            <value>
                <fullName>社内</fullName>
            </value>
            <value>
                <fullName>JST</fullName>
            </value>
            <value>
                <fullName>不明</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>