force-app/main/default/objects/Opportunity/fields/HHS_CommonItem1__c.field-meta.xml
<CustomField>
    <fullName>HHS_CommonItem1__c</fullName>
    <label>共通事項1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>