force-app/main/default/objects/Opportunity/fields/HHS_CommonItem2__c.field-meta.xml
<CustomField>
    <fullName>HHS_CommonItem2__c</fullName>
    <label>共通事項2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>