force-app/main/default/objects/Opportunity/fields/HHS_CompetitionItemCategory__c.field-meta.xml
<CustomField>
    <fullName>HHS_CompetitionItemCategory__c</fullName>
    <label>製品カテゴリー</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductFamily</valueSetName>
    </valueSet>
</CustomField>