force-app/main/default/objects/Opportunity/fields/HHS_ConfirmationOrEstimation__c.field-meta.xml
<CustomField>
    <fullName>HHS_ConfirmationOrEstimation__c</fullName>
    <defaultValue>&quot;0：確定&quot;</defaultValue>
    <label>確推</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0：確定</fullName>
            </value>
            <value>
                <fullName>1：推定</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>