force-app/main/default/objects/Opportunity/fields/HHS_DemoUmu__c.field-meta.xml
<CustomField>
    <fullName>HHS_DemoUmu__c</fullName>
    <label>デモの有無</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>新富</fullName>
            </value>
            <value>
                <fullName>大阪</fullName>
            </value>
            <value>
                <fullName>持込デモ</fullName>
            </value>
            <value>
                <fullName>依頼測定</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>