force-app/main/default/objects/Opportunity/fields/HHS_EAR__c.field-meta.xml
<CustomField>
    <fullName>HHS_EAR__c</fullName>
    <defaultValue>&quot;02：不要&quot;</defaultValue>
    <label>EAR要否</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01：必要</fullName>
            </value>
            <value>
                <fullName>02：不要</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>