force-app/main/default/objects/Opportunity/fields/HHS_ELKbn__c.field-meta.xml
<CustomField>
    <fullName>HHS_ELKbn__c</fullName>
    <label>E/L 区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A：輸出許可（個別）</fullName>
            </value>
            <value>
                <fullName>N：役務取引許可（個別）</fullName>
            </value>
            <value>
                <fullName>2：第1種一般包括輸出許可</fullName>
            </value>
            <value>
                <fullName>Q：第1種一般包括役務取引許可</fullName>
            </value>
            <value>
                <fullName>J：輸出許可取得不要</fullName>
            </value>
            <value>
                <fullName>K：役務取引許可不要</fullName>
            </value>
            <value>
                <fullName>S：少額特例</fullName>
            </value>
            <value>
                <fullName>F：その他特例により許可不要</fullName>
            </value>
            <value>
                <fullName>B：運用通達により該当扱い不要</fullName>
            </value>
            <value>
                <fullName>M：間接輸出（該当告知）</fullName>
            </value>
            <value>
                <fullName>V：間接輸出（非該当告知）</fullName>
            </value>
            <value>
                <fullName>W：輸出承認</fullName>
            </value>
            <value>
                <fullName>C：仲介貿易取引</fullName>
            </value>
            <value>
                <fullName>L：その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>