force-app/main/default/objects/Opportunity/fields/HHS_Establishment__c.field-meta.xml
<CustomField>
    <fullName>HHS_Establishment__c</fullName>
    <label>営業所</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>本社営業部門</fullName>
            </value>
            <value>
                <fullName>大阪営業所</fullName>
            </value>
            <value>
                <fullName>名古屋営業所</fullName>
            </value>
            <value>
                <fullName>九州営業所</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>