force-app/main/default/objects/Opportunity/fields/HHS_ExistingDevice__c.field-meta.xml
<CustomField>
    <fullName>HHS_ExistingDevice__c</fullName>
    <label>現有装置</label>
    <length>255</length>
    <type>Text</type>
</CustomField>