force-app/main/default/objects/Opportunity/fields/HHS_ExistingMaker__c.field-meta.xml
<CustomField>
    <fullName>HHS_ExistingMaker__c</fullName>
    <label>現有メーカ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>