force-app/main/default/objects/Opportunity/fields/HHS_ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>HHS_ExpirationDate__c</fullName>
    <label>有効期限日</label>
    <type>Date</type>
</CustomField>