force-app/main/default/objects/Opportunity/fields/HHS_ExportControlJudgementNo__c.field-meta.xml
<CustomField>
    <fullName>HHS_ExportControlJudgementNo__c</fullName>
    <label>輸管審査No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>