force-app/main/default/objects/Opportunity/fields/HHS_ExternalNo__c.field-meta.xml
<CustomField>
    <fullName>HHS_ExternalNo__c</fullName>
    <label>外部番号(HHS)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>