force-app/main/default/objects/Opportunity/fields/HHS_IChanei__c.field-meta.xml
<CustomField>
    <fullName>HHS_IChanei__c</fullName>
    <defaultValue>false</defaultValue>
    <label>連絡票反映</label>
    <type>Checkbox</type>
</CustomField>