force-app/main/default/objects/Opportunity/fields/HHS_JASISID__c.field-meta.xml
<CustomField>
    <fullName>HHS_JASISID__c</fullName>
    <label>JASISID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>