force-app/main/default/objects/Opportunity/fields/HHS_Jikkenfuragu__c.field-meta.xml
<CustomField>
    <fullName>HHS_Jikkenfuragu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>実推フラグ</label>
    <type>Checkbox</type>
</CustomField>