force-app/main/default/objects/Opportunity/fields/HHS_JippiShikiri__c.field-meta.xml
<CustomField>
    <fullName>HHS_JippiShikiri__c</fullName>
    <label>実費／仕切</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1：仕切</fullName>
            </value>
            <value>
                <fullName>3：実費</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>