force-app/main/default/objects/Opportunity/fields/HHS_LastDemand__c.field-meta.xml
<CustomField>
    <fullName>HHS_LastDemand__c</fullName>
    <label>最終需要先</label>
    <length>255</length>
    <type>Text</type>
</CustomField>