force-app/main/default/objects/Opportunity/fields/HHS_Model3__c.field-meta.xml
<CustomField>
    <fullName>HHS_Model3__c</fullName>
    <label>型式3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>HHS_ProductFamilys__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>HHS_Model</valueSetName>
    </valueSet>
</CustomField>