force-app/main/default/objects/Opportunity/fields/HHS_ModelOther__c.field-meta.xml
<CustomField>
    <fullName>HHS_ModelOther__c</fullName>
    <label>型式（その他）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>