force-app/main/default/objects/Opportunity/fields/HHS_OfficeCommunication__c.field-meta.xml
<CustomField>
    <fullName>HHS_OfficeCommunication__c</fullName>
    <label>社内連絡</label>
    <length>255</length>
    <type>Text</type>
</CustomField>