force-app/main/default/objects/Opportunity/fields/HHS_OrdersSakiAddress__c.field-meta.xml
<CustomField>
    <fullName>HHS_OrdersSakiAddress__c</fullName>
    <description>2018/3/22　項目名変更　「取引先住所」→「最終需要先住所」</description>
    <label>最終需要先住所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>