force-app/main/default/objects/Opportunity/fields/HHS_OrdersSakiState__c.field-meta.xml
<CustomField>
    <fullName>HHS_OrdersSakiState__c</fullName>
    <description>2018/3/22　項目名変更　「取引先都道府県」→「最終需要先都道府県/国名」</description>
    <label>最終需要先都道府県/国名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>