force-app/main/default/objects/Opportunity/fields/HHS_OriginCountry__c.field-meta.xml
<CustomField>
    <fullName>HHS_OriginCountry__c</fullName>
    <defaultValue>&quot;JP&quot;</defaultValue>
    <label>原産国</label>
    <length>255</length>
    <type>Text</type>
</CustomField>