force-app/main/default/objects/Opportunity/fields/HHS_PartialFullDeliveryPart__c.field-meta.xml
<CustomField>
    <fullName>HHS_PartialFullDeliveryPart__c</fullName>
    <defaultValue>&quot;1：完納&quot;</defaultValue>
    <label>分納完納区分</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1：完納</fullName>
            </value>
            <value>
                <fullName>2：分納計上可能</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>