force-app/main/default/objects/Opportunity/fields/HHS_ProductFamilys__c.field-meta.xml
<CustomField>
    <fullName>HHS_ProductFamilys__c</fullName>
    <label>製品群</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Design_Department__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>ProductFamily</valueSetName>
    </valueSet>
</CustomField>