force-app/main/default/objects/Opportunity/fields/HHS_PurchaseCurrency__c.field-meta.xml
<CustomField>
    <fullName>HHS_PurchaseCurrency__c</fullName>
    <defaultValue>&quot;JPY&quot;</defaultValue>
    <label>購買通貨</label>
    <length>255</length>
    <type>Text</type>
</CustomField>