force-app/main/default/objects/Opportunity/fields/HHS_PurchaseOfficeLCNo__c.field-meta.xml
<CustomField>
    <fullName>HHS_PurchaseOfficeLCNo__c</fullName>
    <label>社内L/C No.(買）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>