force-app/main/default/objects/Opportunity/fields/HHS_PurchaseReserveNo__c.field-meta.xml
<CustomField>
    <fullName>HHS_PurchaseReserveNo__c</fullName>
    <label>予約No.(購買)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>