force-app/main/default/objects/Opportunity/fields/HHS_PurchaseReserveRate__c.field-meta.xml
<CustomField>
    <fullName>HHS_PurchaseReserveRate__c</fullName>
    <label>予約レート(購買)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>