force-app/main/default/objects/Opportunity/fields/HHS_Quantity3__c.field-meta.xml
<CustomField>
    <fullName>HHS_Quantity3__c</fullName>
    <label>数量3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>