force-app/main/default/objects/Opportunity/fields/HHS_SaleOfficeLCNo__c.field-meta.xml
<CustomField>
    <fullName>HHS_SaleOfficeLCNo__c</fullName>
    <label>社内L/C No.(売）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>