force-app/main/default/objects/Opportunity/fields/HHS_SaleReserveNo__c.field-meta.xml
<CustomField>
    <fullName>HHS_SaleReserveNo__c</fullName>
    <label>予約No.(販売)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>