force-app/main/default/objects/Opportunity/fields/HHS_SaleReserveRate__c.field-meta.xml
<CustomField>
    <fullName>HHS_SaleReserveRate__c</fullName>
    <label>予約レート(販売)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>