force-app/main/default/objects/Opportunity/fields/HHS_ServiceOffice__c.field-meta.xml
<CustomField>
    <fullName>HHS_ServiceOffice__c</fullName>
    <label>サービス会社</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A60083：HHS</fullName>
            </value>
            <value>
                <fullName>A20124：HFD</fullName>
            </value>
            <value>
                <fullName>A22817：HTA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>