force-app/main/default/objects/Opportunity/fields/HHS_ShukkaSaki1__c.field-meta.xml
<CustomField>
    <fullName>HHS_ShukkaSaki1__c</fullName>
    <label>出荷先 ①</label>
    <length>255</length>
    <type>Text</type>
</CustomField>