force-app/main/default/objects/Opportunity/fields/HHS_ShukkaSaki2__c.field-meta.xml
<CustomField>
    <fullName>HHS_ShukkaSaki2__c</fullName>
    <label>出荷先 ②</label>
    <length>255</length>
    <type>Text</type>
</CustomField>