force-app/main/default/objects/Opportunity/fields/HHS_ShukkaSaki3__c.field-meta.xml
<CustomField>
    <fullName>HHS_ShukkaSaki3__c</fullName>
    <label>出荷先 ③</label>
    <length>255</length>
    <type>Text</type>
</CustomField>