force-app/main/default/objects/Opportunity/fields/HHS_ShukkaSakiOwnerName__c.field-meta.xml
<CustomField>
    <fullName>HHS_ShukkaSakiOwnerName__c</fullName>
    <label>出荷先担当者名称</label>
    <length>255</length>
    <type>Text</type>
</CustomField>