force-app/main/default/objects/Opportunity/fields/HHS_ShukkaSakiSectionName__c.field-meta.xml
<CustomField>
    <fullName>HHS_ShukkaSakiSectionName__c</fullName>
    <label>出荷先部署名称</label>
    <length>255</length>
    <type>Text</type>
</CustomField>