force-app/main/default/objects/Opportunity/fields/HHS_Size_Measure__c.field-meta.xml
<CustomField>
    <fullName>HHS_Size_Measure__c</fullName>
    <label>サイズ/寸法</label>
    <length>32</length>
    <type>Text</type>
</CustomField>