force-app/main/default/objects/Opportunity/fields/HHS_Supplier__c.field-meta.xml
<CustomField>
    <fullName>HHS_Supplier__c</fullName>
    <defaultValue>&quot;F875000001&quot;</defaultValue>
    <label>仕入先</label>
    <length>255</length>
    <type>Text</type>
</CustomField>