force-app/main/default/objects/Opportunity/fields/HHS_SupplierOrdersAmount__c.field-meta.xml
<CustomField>
    <fullName>HHS_SupplierOrdersAmount__c</fullName>
    <label>発注金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>