force-app/main/default/objects/Opportunity/fields/HHS_Tonyufuragu__c.field-meta.xml
<CustomField>
    <fullName>HHS_Tonyufuragu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>投入フラグ</label>
    <type>Checkbox</type>
</CustomField>