force-app/main/default/objects/Opportunity/fields/HHS_Yaruzo__c.field-meta.xml
<CustomField>
    <fullName>HHS_Yaruzo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>やるぞ</label>
    <type>Checkbox</type>
</CustomField>