force-app/main/default/objects/Opportunity/fields/HHT_Shipment_Date__c.field-meta.xml
<CustomField>
    <fullName>HHT_Shipment_Date__c</fullName>
    <description>When will this be shipped from HHT</description>
    <inlineHelpText>When will this be shipped from HHT</inlineHelpText>
    <label>HHT Shipment Date</label>
    <type>Date</type>
</CustomField>