force-app/main/default/objects/Opportunity/fields/HHTchububranch__c.field-meta.xml
<CustomField>
    <fullName>HHTchububranch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HHT担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Users</relationshipName>
    <type>Lookup</type>
</CustomField>