force-app/main/default/objects/Opportunity/fields/HidePartNumber__c.field-meta.xml
<CustomField>
    <fullName>HidePartNumber__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, Part Number column will not be visible in PDF file.</inlineHelpText>
    <label>Hide Part Numbers</label>
    <type>Checkbox</type>
</CustomField>