force-app/main/default/objects/Opportunity/fields/HikiaiId__c.field-meta.xml
<CustomField>
    <fullName>HikiaiId__c</fullName>
    <label>商談 ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>