force-app/main/default/objects/Opportunity/fields/HontaiQuantity__c.field-meta.xml
<CustomField>
    <fullName>HontaiQuantity__c</fullName>
    <description>予算確定時に登録する本体台数</description>
    <label>本体台数（数量）</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>