force-app/main/default/objects/Opportunity/fields/HopeItem__c.field-meta.xml
<CustomField>
    <fullName>HopeItem__c</fullName>
    <label>希望製品</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TEM-HD-2700</fullName>
            </value>
            <value>
                <fullName>TEM-HF5000</fullName>
            </value>
            <value>
                <fullName>TEM-HF-3300</fullName>
            </value>
            <value>
                <fullName>TEM-H-9500</fullName>
            </value>
            <value>
                <fullName>TEM-HT7700</fullName>
            </value>
            <value>
                <fullName>FE-SEM-SU9000</fullName>
            </value>
            <value>
                <fullName>FE-SEM-SU8200</fullName>
            </value>
            <value>
                <fullName>FE-SEM-SU8010</fullName>
            </value>
            <value>
                <fullName>FE-SEM-SU5000</fullName>
            </value>
            <value>
                <fullName>FE-SEM-SU-70</fullName>
            </value>
            <value>
                <fullName>Hi-SEM-SU3500</fullName>
            </value>
            <value>
                <fullName>Hi-SEM-SU1510</fullName>
            </value>
            <value>
                <fullName>Hi-SEM-S-3700N</fullName>
            </value>
            <value>
                <fullName>Miniscope-TM3030Plus/TM3030</fullName>
            </value>
            <value>
                <fullName>FIB-NB5000</fullName>
            </value>
            <value>
                <fullName>FIB-FB2200</fullName>
            </value>
            <value>
                <fullName>FIB-FB-2100 Acc</fullName>
            </value>
            <value>
                <fullName>FIB-NX2000</fullName>
            </value>
            <value>
                <fullName>FIB-NX9000</fullName>
            </value>
            <value>
                <fullName>FIB-MI4050</fullName>
            </value>
            <value>
                <fullName>周辺-IM4000Plus/IM4000</fullName>
            </value>
            <value>
                <fullName>周辺-MC1000</fullName>
            </value>
            <value>
                <fullName>周辺-ZONESEM/ZONETEM</fullName>
            </value>
            <value>
                <fullName>EDX/WDX/EBSP-Oxford</fullName>
            </value>
            <value>
                <fullName>EDX/WDX/EBSP-AMETEK</fullName>
            </value>
            <value>
                <fullName>EDX/WDX/EBSP-BrukerAXS</fullName>
            </value>
            <value>
                <fullName>EDX/WDX/EBSP-堀場</fullName>
            </value>
            <value>
                <fullName>EDX/WDX/EBSP-Thermo</fullName>
            </value>
            <value>
                <fullName>Gatan</fullName>
            </value>
            <value>
                <fullName>SPM/WI/TOF-SIMS-SPM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>