force-app/main/default/objects/Opportunity/fields/HSL_AgencyGr__c.field-meta.xml
<CustomField>
    <fullName>HSL_AgencyGr__c</fullName>
    <label>代理店グループ名</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>(Iサ本)</fullName>
            </value>
            <value>
                <fullName>HHT Gr.</fullName>
            </value>
            <value>
                <fullName>HISYS Gr.</fullName>
            </value>
            <value>
                <fullName>他日立Gr.</fullName>
            </value>
            <value>
                <fullName>NTT Gr.</fullName>
            </value>
            <value>
                <fullName>SoftBank Gr.</fullName>
            </value>
            <value>
                <fullName>シャープGr.</fullName>
            </value>
            <value>
                <fullName>三菱 Gr.</fullName>
            </value>
            <value>
                <fullName>ソニー Gr.</fullName>
            </value>
            <value>
                <fullName>富士通 Gr.</fullName>
            </value>
            <value>
                <fullName>NEC Gr.</fullName>
            </value>
            <value>
                <fullName>ﾈｯﾄﾜﾝ Gr.</fullName>
            </value>
            <value>
                <fullName>KDDI Gr.</fullName>
            </value>
            <value>
                <fullName>IIJ Gr.</fullName>
            </value>
            <value>
                <fullName>キヤノン Gr.</fullName>
            </value>
            <value>
                <fullName>大塚商会</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>直販</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>