force-app/main/default/objects/Opportunity/fields/HTD_HHT_Seisanirai__c.field-meta.xml
<CustomField>
    <fullName>HTD_HHT_Seisanirai__c</fullName>
    <label>HTD⇒HHT 生産依頼</label>
    <type>Date</type>
</CustomField>