force-app/main/default/objects/Opportunity/fields/HTDnaieigyoukubun__c.field-meta.xml
<CustomField>
    <fullName>HTDnaieigyoukubun__c</fullName>
    <label>(HTD)内営業区分</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BJ</fullName>
            </value>
            <value>
                <fullName>DL</fullName>
            </value>
            <value>
                <fullName>GZ</fullName>
            </value>
            <value>
                <fullName>JQ</fullName>
            </value>
            <value>
                <fullName>SH</fullName>
            </value>
            <value>
                <fullName>ZS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>