force-app/main/default/objects/Opportunity/fields/HTE_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>HTE_PO_Number__c</fullName>
    <description>HTE purchase order number to HHT</description>
    <inlineHelpText>HTE purchase order number to HHT</inlineHelpText>
    <label>HTE PO Number</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>