force-app/main/default/objects/Opportunity/fields/InquiryClassification2__c.field-meta.xml
<CustomField>
    <fullName>InquiryClassification2__c</fullName>
    <label>問合せ区分 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>導入検討</fullName>
            </value>
            <value>
                <fullName>営業コンタクト希望</fullName>
            </value>
            <value>
                <fullName>見積依頼</fullName>
            </value>
            <value>
                <fullName>購入調査/デモ</fullName>
            </value>
            <value>
                <fullName>製品質問（価格）</fullName>
            </value>
            <value>
                <fullName>製品質問（仕様）</fullName>
            </value>
            <value>
                <fullName>カタログ請求</fullName>
            </value>
            <value>
                <fullName>情報収集</fullName>
            </value>
            <value>
                <fullName>製品質問（取扱方法）</fullName>
            </value>
            <value>
                <fullName>製品質問（測定手法）</fullName>
            </value>
            <value>
                <fullName>製品質問（アプリケーション）</fullName>
            </value>
            <value>
                <fullName>製品質問（取扱説明書）</fullName>
            </value>
            <value>
                <fullName>製品質問（その他）</fullName>
            </value>
            <value>
                <fullName>受託分析</fullName>
            </value>
            <value>
                <fullName>アクセサリ</fullName>
            </value>
            <value>
                <fullName>部品</fullName>
            </value>
            <value>
                <fullName>消耗品</fullName>
            </value>
            <value>
                <fullName>修理/保守/点検</fullName>
            </value>
            <value>
                <fullName>製品資料</fullName>
            </value>
            <value>
                <fullName>セミナー</fullName>
            </value>
            <value>
                <fullName>キャンペーン</fullName>
            </value>
            <value>
                <fullName>個人宛</fullName>
            </value>
            <value>
                <fullName>技術的な問い合わせ</fullName>
            </value>
            <value>
                <fullName>修理問い合わせ</fullName>
            </value>
            <value>
                <fullName>「部品/消耗品」に関するお問い合わせ</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>